exports[`Toolbar renders correctly when connected 1`] = `
<div
  id="sbToolbar">
  <div
    style={
      Object {
        "backgroundColor": "white",
        "borderBottom": "1px solid #555",
        "display": "flex",
        "flexDirection": "row",
        "height": 30,
        "left": 0,
        "position": "fixed",
        "top": 0,
        "whiteSpace": "nowrap",
        "width": "100%",
        "zIndex": 10,
      }
    }>
    <div
      style={
        Object {
          "padding": "4px 4px 4px 8px",
        }
      }>
      <i
        className="giu-icon fa fa-cog fa-lg"
        id="sbBtnShowSettings"
        onClick={[Function]}
        style={
          Object {
            "color": "rgb(64, 64, 64)",
            "cursor": "pointer",
            "letterSpacing": "normal",
            "marginRight": 10,
          }
        }
        title="Show settings..." />
      <i
        className="giu-icon fa fa-chevron-circle-down fa-lg"
        onClick={[Function]}
        style={
          Object {
            "color": "rgb(64, 64, 64)",
            "cursor": "pointer",
            "letterSpacing": "normal",
            "marginRight": 10,
          }
        }
        title="Expand all stories" />
      <i
        className="giu-icon fa fa-chevron-circle-right fa-lg"
        onClick={[Function]}
        style={
          Object {
            "color": "rgb(64, 64, 64)",
            "cursor": "pointer",
            "letterSpacing": "normal",
            "marginRight": 10,
          }
        }
        title="Collapse all stories" />
      <i
        className="giu-icon fa fa-remove fa-lg"
        onClick={undefined}
        style={
          Object {
            "color": "rgb(64, 64, 64)",
            "cursor": "pointer",
            "letterSpacing": "normal",
            "marginRight": 10,
          }
        }
        title="Clear logs" />
      <i
        className="giu-icon fa fa-info-circle fa-lg"
        onClick={[Function]}
        style={
          Object {
            "color": "rgb(64, 64, 64)",
            "cursor": "pointer",
            "letterSpacing": "normal",
            "marginRight": 10,
          }
        }
        title="Show hints" />
       
      <input
        id="quickFind"
        onChange={[Function]}
        placeholder="Quick find..."
        results={0}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 1,
            "color": "rgb(64, 64, 64)",
          }
        }
        type="search" />
      <i
        className="giu-icon fa fa-chain fa-lg"
        id="sbWsStatusIcon"
        style={
          Object {
            "color": "green",
            "cursor": "default",
            "letterSpacing": "normal",
            "marginLeft": 10,
            "marginRight": 5,
          }
        }
        title="Connection with the server is UP" />
    </div>
    <div
      style={
        Object {
          "flex": "1 1 0px",
        }
      } />
    <div
      colors={
        Object {
          "colorClientBg": "aliceblue",
          "colorClientBgIsDark": false,
          "colorClientFg": "black",
          "colorServerBg": "rgb(214, 236, 255)",
          "colorServerBgIsDark": false,
          "colorServerFg": "black",
          "colorUiBg": "white",
          "colorUiBgIsDark": false,
          "colorUiFg": "rgb(64, 64, 64)",
        }
      }
      dataMockType="Login">
      <div
        style={
          Object {
            "color": "blue",
            "fontWeight": "bold",
          }
        }>
        Login
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "height": 30,
      }
    } />
</div>
`;

exports[`Toolbar renders correctly when disconnected 1`] = `
<div
  id="sbToolbar">
  <div
    style={
      Object {
        "backgroundColor": "white",
        "borderBottom": "1px solid #555",
        "display": "flex",
        "flexDirection": "row",
        "height": 30,
        "left": 0,
        "position": "fixed",
        "top": 0,
        "whiteSpace": "nowrap",
        "width": "100%",
        "zIndex": 10,
      }
    }>
    <div
      style={
        Object {
          "padding": "4px 4px 4px 8px",
        }
      }>
      <i
        className="giu-icon fa fa-cog fa-lg"
        id="sbBtnShowSettings"
        onClick={[Function]}
        style={
          Object {
            "color": "rgb(64, 64, 64)",
            "cursor": "pointer",
            "letterSpacing": "normal",
            "marginRight": 10,
          }
        }
        title="Show settings..." />
      <i
        className="giu-icon fa fa-chevron-circle-down fa-lg"
        onClick={[Function]}
        style={
          Object {
            "color": "rgb(64, 64, 64)",
            "cursor": "pointer",
            "letterSpacing": "normal",
            "marginRight": 10,
          }
        }
        title="Expand all stories" />
      <i
        className="giu-icon fa fa-chevron-circle-right fa-lg"
        onClick={[Function]}
        style={
          Object {
            "color": "rgb(64, 64, 64)",
            "cursor": "pointer",
            "letterSpacing": "normal",
            "marginRight": 10,
          }
        }
        title="Collapse all stories" />
      <i
        className="giu-icon fa fa-remove fa-lg"
        onClick={undefined}
        style={
          Object {
            "color": "rgb(64, 64, 64)",
            "cursor": "pointer",
            "letterSpacing": "normal",
            "marginRight": 10,
          }
        }
        title="Clear logs" />
      <i
        className="giu-icon fa fa-info-circle fa-lg"
        onClick={[Function]}
        style={
          Object {
            "color": "rgb(64, 64, 64)",
            "cursor": "pointer",
            "letterSpacing": "normal",
            "marginRight": 10,
          }
        }
        title="Show hints" />
       
      <input
        id="quickFind"
        onChange={[Function]}
        placeholder="Quick find..."
        results={0}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 1,
            "color": "rgb(64, 64, 64)",
          }
        }
        type="search" />
      <i
        className="giu-icon fa fa-chain-broken fa-lg"
        id="sbWsStatusIcon"
        style={
          Object {
            "color": "red",
            "cursor": "default",
            "letterSpacing": "normal",
            "marginLeft": 10,
            "marginRight": 5,
          }
        }
        title="Connection with the server is DOWN" />
    </div>
    <div
      style={
        Object {
          "flex": "1 1 0px",
        }
      } />
    <div
      colors={
        Object {
          "colorClientBg": "aliceblue",
          "colorClientBgIsDark": false,
          "colorClientFg": "black",
          "colorServerBg": "rgb(214, 236, 255)",
          "colorServerBgIsDark": false,
          "colorServerFg": "black",
          "colorUiBg": "white",
          "colorUiBgIsDark": false,
          "colorUiFg": "rgb(64, 64, 64)",
        }
      }
      dataMockType="Login">
      <div
        style={
          Object {
            "color": "blue",
            "fontWeight": "bold",
          }
        }>
        Login
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "height": 30,
      }
    } />
</div>
`;

exports[`Toolbar shows settings when the corresponding icon is clicked 1`] = `
<div
  id="sbToolbar">
  <div
    colors={
      Object {
        "colorClientBg": "aliceblue",
        "colorClientBgIsDark": false,
        "colorClientFg": "black",
        "colorServerBg": "rgb(214, 236, 255)",
        "colorServerBgIsDark": false,
        "colorServerFg": "black",
        "colorUiBg": "white",
        "colorUiBgIsDark": false,
        "colorUiFg": "rgb(64, 64, 64)",
      }
    }
    dataMockType="Settings"
    onClose={[Function]}>
    <div
      style={
        Object {
          "color": "blue",
          "fontWeight": "bold",
        }
      }>
      Settings
    </div>
  </div>
  <div
    style={
      Object {
        "backgroundColor": "white",
        "borderBottom": "1px solid #555",
        "display": "flex",
        "flexDirection": "row",
        "height": 30,
        "left": 0,
        "position": "fixed",
        "top": 0,
        "whiteSpace": "nowrap",
        "width": "100%",
        "zIndex": 10,
      }
    }>
    <div
      style={
        Object {
          "padding": "4px 4px 4px 8px",
        }
      }>
      <i
        className="giu-icon fa fa-cog fa-lg"
        id="sbBtnShowSettings"
        onClick={[Function]}
        style={
          Object {
            "color": "rgb(64, 64, 64)",
            "cursor": "pointer",
            "letterSpacing": "normal",
            "marginRight": 10,
          }
        }
        title="Show settings..." />
      <i
        className="giu-icon fa fa-chevron-circle-down fa-lg"
        onClick={[Function]}
        style={
          Object {
            "color": "rgb(64, 64, 64)",
            "cursor": "pointer",
            "letterSpacing": "normal",
            "marginRight": 10,
          }
        }
        title="Expand all stories" />
      <i
        className="giu-icon fa fa-chevron-circle-right fa-lg"
        onClick={[Function]}
        style={
          Object {
            "color": "rgb(64, 64, 64)",
            "cursor": "pointer",
            "letterSpacing": "normal",
            "marginRight": 10,
          }
        }
        title="Collapse all stories" />
      <i
        className="giu-icon fa fa-remove fa-lg"
        onClick={undefined}
        style={
          Object {
            "color": "rgb(64, 64, 64)",
            "cursor": "pointer",
            "letterSpacing": "normal",
            "marginRight": 10,
          }
        }
        title="Clear logs" />
      <i
        className="giu-icon fa fa-info-circle fa-lg"
        onClick={[Function]}
        style={
          Object {
            "color": "rgb(64, 64, 64)",
            "cursor": "pointer",
            "letterSpacing": "normal",
            "marginRight": 10,
          }
        }
        title="Show hints" />
       
      <input
        id="quickFind"
        onChange={[Function]}
        placeholder="Quick find..."
        results={0}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 1,
            "color": "rgb(64, 64, 64)",
          }
        }
        type="search" />
      <i
        className="giu-icon fa fa-chain fa-lg"
        id="sbWsStatusIcon"
        style={
          Object {
            "color": "green",
            "cursor": "default",
            "letterSpacing": "normal",
            "marginLeft": 10,
            "marginRight": 5,
          }
        }
        title="Connection with the server is UP" />
    </div>
    <div
      style={
        Object {
          "flex": "1 1 0px",
        }
      } />
    <div
      colors={
        Object {
          "colorClientBg": "aliceblue",
          "colorClientBgIsDark": false,
          "colorClientFg": "black",
          "colorServerBg": "rgb(214, 236, 255)",
          "colorServerBgIsDark": false,
          "colorServerFg": "black",
          "colorUiBg": "white",
          "colorUiBgIsDark": false,
          "colorUiFg": "rgb(64, 64, 64)",
        }
      }
      dataMockType="Login">
      <div
        style={
          Object {
            "color": "blue",
            "fontWeight": "bold",
          }
        }>
        Login
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "height": 30,
      }
    } />
</div>
`;
